--- a/style/about_style.css
+++ b/style/about_style.css
@@ -12,11 +12,8 @@ h4 {
 	margin: 0 0 15px 0;
 	font-size: 1.5em;
 }
-.black-background {
-	background-color: #160505;
-}
 #slogan {
-	height: 500px;
+	height: 300px;
 	min-height: unset;
 	background-image: url("../image/about-background.jpg");
 	background-size: cover;
@@ -179,6 +176,10 @@ h4 {
     }
 }
 @media (max-width: 670px) {
+    #slogan {
+        height: 150px;
+        margin-top: 60px;
+    }
     #slogan p {
 		text-align: center;
         font-size: 24px;
@@ -189,7 +190,10 @@ h4 {
 	}
 	#slogan p:last-child {
 		display: block;
-	}
+    }
+    #first {
+        padding-top: 5px;
+    }
     #first h4 {
         width: 100%;
         margin: 50px auto 20px;
