--- a/style/global_style.css
+++ b/style/global_style.css
@@ -19,6 +19,9 @@ a:link {
 a:visited {
 	color: inherit;
 }
+.black-background {
+	background-color: #160505;
+}
 header {
 	width: 100%;
 	height: 80px;
@@ -44,7 +47,7 @@ footer {
 	padding-right: 23px;
 	margin-right: 38px;
 	min-width: 300px;
-	max-width: 550px;
+	/* max-width: 550px; */
 }
 #top-logo {
 	padding-left: 23px;
@@ -149,7 +152,11 @@ footer {
 	padding: 0px 1px;
 	transform: translateY(3px);
 }
-
+@media (max-width: 1000px) {
+	#header-nav {
+		padding-right: 0px;
+	}
+}
 @media (max-width: 950px) {
     .footer-btn {
 		display: unset
@@ -167,7 +174,14 @@ footer {
 		margin: 25px auto 0;
 	}
 }
-
+@media (max-width: 860px) {
+	#contact-btn {
+		display: none;
+	}
+	#header-nav a:nth-child(5) li::after{
+		width: 0px;
+	}
+}
 @media (max-width: 750px) {
     body{ 
 		overflow-x: hidden;
@@ -210,8 +224,11 @@ footer {
 	#header-nav li:last-child{
 		box-shadow: 0px 3px 3px rgba(0,0,0,0.5);
 	}
+	#contact-btn {
+		display: block;
+	}
 	#menu-toggle:checked+#header-nav {
-		height: 250px;
+		height: 300px;
 	}
 	#top-logo {
 		width: 130px;
