--- a/style/download_style.css
+++ b/style/download_style.css
@@ -63,18 +63,19 @@ section {
 .show-info-box {
     border: 1px solid #fff;
     border-radius: 5px;
-    width: 85%;
+    width: 70%;
     max-width: 1366px;
     min-height: 300px;
     margin: 50px auto;
     display: none;
+    padding: 30px 0;
 }
 #block-liccon, #block-slimtab, #block-xxx {
     display: none;
     background: #e01e0a;
     width: 90%;
-    height: 30px;
-    margin: 5px auto;
+    height: 130px;
+    margin: 0 auto;
 }
 .label-box label:hover,
 #software-liccon:checked ~ .label-box #label-liccon,
