--- a/style/download_style.css
+++ b/style/download_style.css
@@ -22,6 +22,8 @@ section {
 }
 #download{
     background: #160505;
+    min-height: 300px;
+    height: 20vh;
 }
 #software-liccon, #software-slimtab, #software-xxx {
     display: none;
@@ -96,4 +98,11 @@ section {
 #software-slimtab:checked ~ .show-info-box #block-slimtab,
 #software-xxx:checked ~ .show-info-box #block-xxx {
     display: block;
+}
+
+#download p {
+    margin: 0;
+    color: #fff;
+    font-size: 25px;
+    text-align: center;
 }
